MDEV-5898 FOUND_ROWS() return incorrect value when using DISTINCT

revert the fix for MDEV-5549, use a different approach.